--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
             <div class="widget-container" style="margin-top: 20px;;">
               <div class="widget-chart" style="height: px;">
-                <iframe width="580" height="280" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=360&round=10&timescale=daily&title=Temperature&type=line"></iframe>
+                <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/1?bgcolor=%23ffffff&color=%23d62020&days=1&dynamic=true&max=50&min=0&results=60&title=Temperature&type=line"></iframe>
               </div>
               <div class="widget-chart">   
-                <iframe width="580" height="280" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/2?average=daily&bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&title=Humidity&type=line"></iframe>
+                <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/2?bgcolor=%23ffffff&color=%23d62020&days=1&dynamic=true&max=90&min=20&results=60&title=Humidity&type=line"></iframe>
               </div>
               <div class="widget-chart">
-                <iframe width="580" height="280" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/3?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&title=Dust&type=line"></iframe>
+                <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/3?bgcolor=%23ffffff&color=%23d62020&days=1&dynamic=true&results=60&title=Dust&type=line"></iframe>
               </div>
           </div>
           <div class="widget-container" style="margin-top: 70px;">
