--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
             <div class="widget-container" style="margin-top: 20px;;">
               <div class="widget-chart" style="height: px;">
-                <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/1?bgcolor=%23ffffff&color=%23d62020&days=1&dynamic=true&max=50&min=0&results=60&title=Temperature&type=line"></iframe>
+               <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/1?average=10&bgcolor=%23ffffff&color=%23d62020&days=1&dynamic=false&results=3600&title=Temperature&type=line&yaxismax=50&yaxismin=0"></iframe>
               </div>
               <div class="widget-chart">   
-                <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/2?bgcolor=%23ffffff&color=%23d62020&days=1&dynamic=true&max=90&min=20&results=60&title=Humidity&type=line"></iframe>
+<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/2?average=10&bgcolor=%23ffffff&color=%23d62020&days=1&dynamic=true&results=3600&title=Humidity&type=line&yaxismax=90&yaxismin=20"></iframe>
               </div>
               <div class="widget-chart">
-                <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/3?bgcolor=%23ffffff&color=%23d62020&days=1&dynamic=true&results=60&title=Dust&type=line"></iframe>
+<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2691451/charts/3?average=10&bgcolor=%23ffffff&color=%23d62020&days=1&dynamic=true&results=3600&title=Dust&type=line"></iframe>
               </div>
           </div>
           <div class="widget-container" style="margin-top: 70px;">
